Squashed commit of the following:
commit d87bb4ba3892e82ea7f92f6c141aaabf40985951
Author: Đinh Văn Thái Sơn <139418331+dvtson2004@users.noreply.github.com>
Date:   Fri Jul 4 16:25:58 2025 +0700

    update

commit dfc6e0e84a4c9f2bcabbdd42a6c32af6ecd26ca8
Author: Đinh Văn Thái Sơn <139418331+dvtson2004@users.noreply.github.com>
Date:   Fri Jul 4 16:11:11 2025 +0700

    update

commit 9a18fe28fd198fb7a7f9b1dfd758e96655e51638
Author: AnhMinhHoang <anhminhnamly1@gmail.com>
Date:   Thu Jun 26 08:45:29 2025 +0700

    Fix Job post(Maybe)

commit be84210fdbb79414b31638cc2be5355c7df79897
Author: Đinh Văn Thái Sơn <139418331+dvtson2004@users.noreply.github.com>
Date:   Tue Jun 24 14:22:32 2025 +0700

    Fix Job Post

commit 0c40653ee2c1fa5fa59ae7a45d56c22568a98489
Merge: d2b399f 0c4df3d
Author: Đinh Văn Thái Sơn <139418331+dvtson2004@users.noreply.github.com>
Date:   Sun Jun 22 14:10:27 2025 +0700

    Merge branch 'main' of https://github.com/AnhMinhHoang/TalentShift

commit d2b399f30e08a50c0b9f8d79be912f69264c9ead
Author: AnhMinhHoang <anhminhnamly1@gmail.com>
Date:   Tue Jun 17 20:26:05 2025 +0700

    Squashed commit of the following:

    commit 273b4ab80d955f3c527a8dfd5bea23358cf94e57
    Author: AnhMinhHoang <anhminhnamly1@gmail.com>
    Date:   Tue Jun 17 20:22:25 2025 +0700

        Squashed commit of the following:

        commit 5e3a3811402f689dd14c34c8bbdb03190722d74a
        Author: AnhMinhHoang <anhminhnamly1@gmail.com>
        Date:   Tue Jun 17 19:29:07 2025 +0700

            Update login register

        commit 4263e2b65b216be1fc6973e46eaa7032ddfef7ec
        Author: AnhMinhHoang <anhminhnamly1@gmail.com>
        Date:   Tue May 27 15:02:15 2025 +0700

            Update UI

        commit 2c1fbe7bb827a7d59283649db4345b9fc4d1bb59
        Author: AnhMinhHoang <anhminhnamly1@gmail.com>
        Date:   Fri Mar 21 12:01:56 2025 +0700

            Squashed commit of the following:

            commit e17668060dc5441ee9f70628df00f963ded7d53a
            Autho